--- a/3_course/1_part/VPandHCI/DB/userdata.ui
+++ b/3_course/1_part/VPandHCI/DB/userdata.ui
@@ -200,7 +200,7 @@
                      <widget class="QLabel" name="abonDurToLabel">
                       <property name="minimumSize">
                        <size>
-                        <width>101</width>
+                        <width>111</width>
                         <height>0</height>
                        </size>
                       </property>
@@ -227,7 +227,7 @@
                   <property name="minimumSize">
                    <size>
                     <width>0</width>
-                    <height>50</height>
+                    <height>30</height>
                    </size>
                   </property>
                   <property name="text">
@@ -237,28 +237,28 @@
                 </item>
                </layout>
               </item>
-              <item>
-               <widget class="QPushButton" name="pushButton">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="minimumSize">
-                 <size>
-                  <width>154</width>
-                  <height>30</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>Добавить абонемент</string>
-                </property>
-               </widget>
-              </item>
              </layout>
             </item>
            </layout>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="addAbon">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>250</width>
+             <height>50</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Добавить абонемент</string>
+           </property>
           </widget>
          </item>
         </layout>
