--- a/3_course/1_part/VPandHCI/DB/mainwindow.ui
+++ b/3_course/1_part/VPandHCI/DB/mainwindow.ui
@@ -24,7 +24,7 @@
        <enum>QTabWidget::Triangular</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="iconSize">
        <size>
@@ -82,7 +82,7 @@
                     <widget class="QLabel" name="FN">
                      <property name="minimumSize">
                       <size>
-                       <width>71</width>
+                       <width>85</width>
                        <height>0</height>
                       </size>
                      </property>
@@ -100,9 +100,15 @@
                   <layout class="QHBoxLayout" name="horizontalLayout_2">
                    <item>
                     <widget class="QLabel" name="From">
+                     <property name="sizePolicy">
+                      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                       <horstretch>0</horstretch>
+                       <verstretch>0</verstretch>
+                      </sizepolicy>
+                     </property>
                      <property name="minimumSize">
                       <size>
-                       <width>71</width>
+                       <width>85</width>
                        <height>0</height>
                       </size>
                      </property>
@@ -120,9 +126,15 @@
                   <layout class="QHBoxLayout" name="horizontalLayout_3">
                    <item>
                     <widget class="QLabel" name="To">
+                     <property name="sizePolicy">
+                      <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+                       <horstretch>0</horstretch>
+                       <verstretch>0</verstretch>
+                      </sizepolicy>
+                     </property>
                      <property name="minimumSize">
                       <size>
-                       <width>71</width>
+                       <width>85</width>
                        <height>0</height>
                       </size>
                      </property>
@@ -234,7 +246,7 @@
      <x>0</x>
      <y>0</y>
      <width>789</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
