--- a/3_course/1_part/VPandHCI/DB/res.qrc
+++ b/3_course/1_part/VPandHCI/DB/res.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>qss/styles.css</file>
+        <file>qss/beach.png</file>
     </qresource>
 </RCC>
