--- a/3_course/1_part/VPandHCI/DB/userdata.ui
+++ b/3_course/1_part/VPandHCI/DB/userdata.ui
@@ -85,7 +85,7 @@
             <item>
              <widget class="QLabel" name="docphoto">
               <property name="sizePolicy">
-               <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+               <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
@@ -200,7 +200,7 @@
                      <widget class="QLabel" name="abonDurToLabel">
                       <property name="minimumSize">
                        <size>
-                        <width>101</width>
+                        <width>111</width>
                         <height>0</height>
                        </size>
                       </property>
