--- a/3_course/1_part/VPandHCI/DB/qss/styles.css
+++ b/3_course/1_part/VPandHCI/DB/qss/styles.css
@@ -23,7 +23,7 @@ MainWindow {
     background-image: url(:qss/beach.png);
 }
 
-QLabel, QGroupBox::title {
+QGroupBox::title {
     color: #ffffff;
 }
 userdata, Dialog {
