--- a/3_course/1_part/VPandHCI/DB/userdata.ui
+++ b/3_course/1_part/VPandHCI/DB/userdata.ui
@@ -28,18 +28,25 @@
          </property>
          <property name="font">
           <font>
-           <family>Narkisim</family>
+           <family>Arial</family>
            <pointsize>16</pointsize>
-           <weight>50</weight>
+           <weight>75</weight>
            <italic>true</italic>
-           <bold>false</bold>
+           <bold>true</bold>
           </font>
          </property>
          <property name="styleSheet">
-          <string notr="true">font: italic 16pt &quot;Narkisim&quot;;</string>
+          <string notr="true">font: bold italic 16pt &quot;Arial&quot;;</string>
          </property>
          <property name="text">
           <string>ФИО</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>Редактировать контактные данные</string>
          </property>
         </widget>
        </item>
@@ -53,6 +60,14 @@
              <height>0</height>
             </size>
            </property>
+           <property name="font">
+            <font>
+             <family>Arial</family>
+             <weight>75</weight>
+             <italic>true</italic>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="text">
             <string>Пол</string>
            </property>
@@ -65,6 +80,14 @@
              <width>130</width>
              <height>0</height>
             </size>
+           </property>
+           <property name="font">
+            <font>
+             <family>Arial</family>
+             <weight>75</weight>
+             <italic>true</italic>
+             <bold>true</bold>
+            </font>
            </property>
            <property name="text">
             <string>Телефон</string>
